--- a/html/web-index.html
+++ b/html/web-index.html
@@ -27,6 +27,10 @@
         <section class="box1">
             <div class="center">
                 <div class="container">
+		<div class="logo">
+                        <div class="img-logo"><img src="../img/logo.jpg"></div>
+                    </div>
+
                     <div class="desc">
                         <h2>Pooh</h2>
                         <p>Student / Developer </p>
