--- a/html/private-index.html
+++ b/html/private-index.html
@@ -53,7 +53,7 @@
                                 <h3>Instagram</h3>
                             </div>
                         </a>
-                        <a href="https://www.threads.net/@thanakornsaejong6"
+                        <a href="https://github.com/Pooh191"
                         target="_blank" rel="noopener noreferrer">
                         <div class="link-a"><i class="fab fa-github"></i>
                             <h3>Github</h3>
